[package]
name = "kvarn-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
futures = { version = "0.3", default-features = false, features = ["std"] }
kvarn = { version = "0.4.1", path = "../kvarn", default-features = false }
log = "0.4"
rand = "0.8.5"

# structured
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

# hash
sha2 = { version = "0.10", optional = true }
# encryption / decryption
chacha20 = { version = "0.7.0", optional = true }
# signers / verifiers
rsa = { version = "0.6", optional = true }
p256 = { version = "0.11.1", default-features = false, features = ["ecdsa"], optional = true }
hmac = { version = "0.12", optional = true }

[features]
default = ["ecdsa", "structured"]
ecdsa = ["p256", "chacha20", "sha2"]
rsa = ["dep:rsa", "sha2"]
hmac = ["dep:hmac", "chacha20", "sha2"]
structured = ["serde", "serde_json"]
