[package]
name = "kvarn-auth"
version = "0.2.0"
edition = "2021"
description = "JWT authentication for Kvarn"
readme = "README.md"
homepage = "https://github.com/Icelk/kvarn-auth/"
repository = "https://github.com/Icelk/kvarn-auth/"
license = "Apache-2.0"
keywords = ["authentication", "jwt", "token", "kvarn"]
categories = ["authentication", "algorithms", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
futures = { version = "0.3", default-features = false, features = ["std"] }
kvarn = { version = "0.6", path = "../kvarn", default-features = false }
log = "0.4"
rand = "0.8.5"

# structured
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

# hash
sha2 = { version = "0.10", optional = true, features = ["oid"] }
# encryption / decryption
chacha20 = { version = "0.9", optional = true }
# signers / verifiers
rsa = { version = "0.9", optional = true }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
hmac = { version = "0.12", optional = true }

# integrations
bincode = { version = "2.0.0-rc.3", optional = true, features = ["serde"] }
dashmap = { version = "6", optional = true, features = ["serde"] }
compact_str = { version = "0.8", optional = true, features = ["serde"] }
xxhash-rust = { version = "0.8", optional = true, features = ["xxh3"] }
tokio = { version = "1", optional = true }

[features]
default = ["ecdsa", "structured"]
ecdsa = ["p256", "chacha20", "sha2"]
rsa = ["dep:rsa", "sha2"]
hmac = ["dep:hmac", "chacha20", "sha2"]
structured = ["serde", "serde_json"]

integration-fs = ["serde/derive", "dashmap", "bincode", "compact_str/serde", "xxhash-rust", "tokio/fs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
